# starquant

./: .flake8  .gitignore  README.md  README_eng.md  backtest.py  config_backtest.yaml  config_client.yaml  config_server.yaml  gui.py  quantvs.code-workspace  recorder.py  requirements.txt  setup.py  sqbacktest.py  sqgui.py  sqserver  sqstrategy.py  strategy.py  tbtrecorder.py  testapiserver.ext  trade.py
cppsrc/: CMakeLists.txt
cppsrc/StarQuant/: CMakeLists.txt
cppsrc/StarQuant/APIs/Ctp/: DataCollect.h  Error.xml  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  error.xml
cppsrc/StarQuant/APIs/ITap/: TapAPICommDef.h  TapAPIError.h  Version.txt  acc.txt  iTapAPICommDef.h  iTapAPIError.h  iTapTradeAPI.h  iTapTradeAPIDataType.h
cppsrc/StarQuant/APIs/Oes/mds_api/: CHANGELOG.md  README.md  UpdateGuide.md  mds_api.h
cppsrc/StarQuant/APIs/Oes/mds_global/: mds_base_model.h  mds_mkt_packets.h  mds_qry_packets.h
cppsrc/StarQuant/APIs/Oes/oes_api/: CHANGELOG.md  README.md  UpdateGuide.md  oes_api.h
cppsrc/StarQuant/APIs/Oes/oes_global/: oes_packets.h  (+2 more)
cppsrc/StarQuant/APIs/Tap/: TapQuoteAPI.h  TapTradeAPIDataType.h
cppsrc/StarQuant/Brokers/: all.hpp  state_change.xlsx
cppsrc/StarQuant/Brokers/Backtest/: backtestdatafeed.cpp  backtestdatafeed.h
cppsrc/StarQuant/Brokers/Ctp/: ThostFtdcUserApiStruct.h  ctpbrokerage.cpp  ctpbrokerage.h  ctpdatafeed.cpp  ctpdatafeed.h  error.xml
cppsrc/StarQuant/Brokers/Google/: googledatafeed.cpp  googledatafeed.h
cppsrc/StarQuant/Brokers/IB/: IBClient.cs  ibbrokerage.cpp  ibbrokerage.h
cppsrc/StarQuant/Brokers/Paper/: paperbrokerage.cpp  paperbrokerage.h  paperdatafeed.cpp  paperdatafeed.h
cppsrc/StarQuant/Brokers/Sina/: sinadatafeed.cpp  sinadatafeed.h
cppsrc/StarQuant/Brokers/Tap/: TapAPICommDef.h  TapAPIError.h  TapQuoteAPIDataType.h  TapTradeAPI.h  tapbrokerage.cpp  tapbrokerage.h  tapdatafeed.cpp  tapdatafeed.h
cppsrc/StarQuant/Common/: config.cpp  config.h  consolecontrolhandler.cpp  consolecontrolhandler.h  datastruct.cpp  datastruct.h  getRealTime.cpp  heartbeat.cpp  heartbeat.h  logger.cpp  logger.h  msgq.cpp  msgq.h  tick.cpp  timeutil.cpp  util.cpp  util.h
cppsrc/StarQuant/Common/Account/: accountinfo.h  accountmanager.cpp  accountmanager.h
cppsrc/StarQuant/Common/Brokerage/: brokerage.cpp  brokerage.h  exchange.cpp  exchange.h
cppsrc/StarQuant/Common/Data/: bar.cpp  bar.h  barinterval.h  barseries.cpp  barseries.h  datamanager.cpp  datamanager.h  datatype.h  marketdatafeed.cpp  marketdatafeed.h  tick.cpp  tick.h  tickreader.h  tickwriter.h
cppsrc/StarQuant/Common/Logger/: logger.cpp  logger.h
cppsrc/StarQuant/Common/Msgq/: msgq.cpp  msgq.h
cppsrc/StarQuant/Common/Order/: fill.h  order.h  orderbook.cpp  orderbook.h  orderidtracker.h  ordermanager.cpp  ordermanager.h  orderstatus.cpp  orderstatus.h  ordertype.h  timeinforce.h
cppsrc/StarQuant/Common/Performance/: performancemanager.cpp  performancemanager.h  reportmanager.cpp  reportmanager.h
cppsrc/StarQuant/Common/Risk/: marginmanager.cpp  marginmanager.h  riskmanager.cpp  riskmanager.h
cppsrc/StarQuant/Common/Security/: portfoliomanager.cpp  portfoliomanager.h  position.cpp  position.h  security.h  securitytype.h
cppsrc/StarQuant/Common/Strategy/: strategybase.cpp
cppsrc/StarQuant/Common/Time/: getRealTime.cpp  getRealTime.h  heartbeat.cpp  heartbeat.h  timeutil.cpp  timeutil.h
cppsrc/StarQuant/Common/Util/: calc.cpp  calc.h  consolecontrolhandler.cpp  util.cpp  util.h
cppsrc/StarQuant/Data/: bar.cpp  bar.h  barinterval.h  barseries.cpp  barseries.h  datamanager.cpp  datamanager.h  datatype.h  security.h  securitytype.h  tick.cpp  tick.h  tickreader.h  tickwriter.h
cppsrc/StarQuant/Engine/: CtpMDEngine.cpp  CtpMDEngine.h  CtpTDEngine.cpp  CtpTDEngine.h  IEngine.cpp  IEngine.h  OesMDEngine.cpp  OesMDEngine.h  PaperTDEngine.cpp  PaperTDEngine.h  TapMDEngine.cpp  TapMDEngine.h  TapTDEngine.cpp  TapTDEngine.h  XtpMDEngine.cpp  XtpMDEngine.h
cppsrc/StarQuant/Services/: backtestoptimizationengine.cpp  backtestoptimizationengine.h  dataservice.cpp  dataservice.h  sqserver.cpp  starquant_.cpp  strategyservice.cpp  strategyservice.h  tradingengine.cpp  tradingengine.h
cppsrc/StarQuant/Services/Api/: apiservice.cpp  apiservice.h
cppsrc/StarQuant/Services/Brokerage/: brokerageservice.cpp  brokerageservice.h
cppsrc/StarQuant/Services/Data/: dataservice.cpp  dataservice.h
cppsrc/StarQuant/Services/Strategy/: strategyservice.cpp  strategyservice.h
cppsrc/StarQuant/Strategy/: smacross.cpp  smacross.h  strategyFactory.cpp  strategyFactory.h  strategybase.cpp  strategybase.h  strategymanager.cpp  strategymanager.h
cppsrc/StarQuant/Trade/: accountinfo.h  calc.cpp  calc.h  currencytype.h  fill.h  marginmanager.cpp  marginmanager.h  order.h  ordermanager.cpp  ordermanager.h  orderstatus.cpp  orderstatus.h  ordertype.h  portfoliomanager.cpp  portfoliomanager.h  position.cpp  position.h  riskmanager.cpp  riskmanager.h
cppsrc/cmake/modules/: Findcereal.cmake  Findfmt.cmake  Findlog4cplus.cmake  Findnanomsg.cmake  Findrapidjson.cmake  Findsodium.cmake  Findyamlcpp.cmake
cppsrc/log4cplus-2.0.4/: REVISION
(+277 files in other folders)
